--- a/.pip/pip.conf
+++ b/.pip/pip.conf
@@ -1,4 +1,4 @@
 [global]
-index-url = http://pypi.mirrors.ustc.edu.cn/simple/
+index-url = https://pypi.mirrors.ustc.edu.cn/simple/
 [install]
 trusted-host=mirrors.aliyun.com
