--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -6,7 +6,6 @@
   "coc.preferences.messageLevel": "error",
   "coc.source.around.firstMatch": false,
   "coc.source.buffer.firstMatch": false,
-  "coc.source.syntax.firstMatch": false,
   "suggest.detailMaxLength": 60,
   "suggest.noselect": true,
   "suggest.enablePreselect": false,
@@ -57,7 +56,14 @@
   "diagnostic.checkCurrentLine": true,
   "diagnostic.virtualTextPrefix": " ❯❯❯ ",
   "diagnostic.virtualText": true,
-  "coc.preferences.formatOnSaveFiletypes": ["typescript", "html", "css", "json", "python", "vue"],
+  "coc.preferences.formatOnSaveFiletypes": [
+    "typescript",
+    "html",
+    "css",
+    "json",
+    "python",
+    "vue"
+  ],
   "explorer.width": 38,
   "explorer.quitOnOpen": true,
   "explorer.sources": [
@@ -74,26 +80,45 @@
   "explorer.file.column.git.showIgnored": true,
   "explorer.keyMappings.global": {
     "i": false,
-
     "gk": "expandablePrev",
     "gj": "expandableNext",
-
     "*": "toggleSelection",
     "<tab>": "actionMenu",
-
     "h": "collapse",
-    "l": ["expandable?", "expand", "open"],
-    "J": ["toggleSelection", "nodeNext"],
-    "K": ["toggleSelection", "nodePrev"],
+    "l": [
+      "expandable?",
+      "expand",
+      "open"
+    ],
+    "J": [
+      "toggleSelection",
+      "nodeNext"
+    ],
+    "K": [
+      "toggleSelection",
+      "nodePrev"
+    ],
     "gl": "expandRecursive",
     "gh": "collapseRecursive",
     "<2-LeftMouse>": [
       "expandable?",
-      ["expanded?", "collapse", "expand"],
+      [
+        "expanded?",
+        "collapse",
+        "expand"
+      ],
       "open"
     ],
-    "o": ["expanded?", "collapse", "expand"],
-    "<cr>": ["expandable?", "cd", "open"],
+    "o": [
+      "expanded?",
+      "collapse",
+      "expand"
+    ],
+    "<cr>": [
+      "expandable?",
+      "cd",
+      "open"
+    ],
     "e": "open",
     "s": "open:split",
     "S": "open:split:plain",
@@ -101,7 +126,6 @@
     "t": "open:tab",
     "<bs>": "gotoParent",
     "gp": "preview:labeling",
-
     "y": "copyFilepath",
     "Y": "copyFilename",
     "c": "copyFile",
@@ -109,35 +133,29 @@
     "p": "pasteFile",
     "d": "delete",
     "D": "deleteForever",
-
     "a": "addFile",
     "A": "addDirectory",
     "r": "rename",
-
     ".": "toggleHidden",
     "R": "refresh",
-
     "?": "help",
     "q": "quit",
     "<esc>": "esc",
     "X": "systemExecute",
     "gd": "listDrive",
-
     "f": "search",
     "F": "searchRecursive",
-
     "gf": "gotoSource:file",
     "gb": "gotoSource:buffer",
-
     "[[": "sourcePrev",
-      "]]": "sourceNext",
-
-      "[d": "diagnosticPrev",
-        "]d": "diagnosticNext",
-
-        "[c": "gitPrev",
-          "]c": "gitNext",
-          "<<": "gitStage",
-          ">>": "gitUnstage"
-  }
+    "]]": "sourceNext",
+    "[d": "diagnosticPrev",
+    "]d": "diagnosticNext",
+    "[c": "gitPrev",
+    "]c": "gitNext",
+    "<<": "gitStage",
+    ">>": "gitUnstage"
+  },
+  "clangd.enabled": true,
+  "clangd.semanticHighlighting": true
 }
