--- a/.tmux.conf
+++ b/.tmux.conf
@@ -53,5 +53,7 @@ bind q kill-pane
 
 # 复制模式支持vi风格
 setw -g mode-keys vi
-
-
+set-option -sg escape-time 10
+set-option -g focus-events on
+set -g default-terminal "screen-256color"
+set-option -ga terminal-overrides ",screen-256color:RGB"
