--- a/.tmux.conf
+++ b/.tmux.conf
@@ -56,4 +56,4 @@ setw -g mode-keys vi
 set-option -sg escape-time 10
 set-option -g focus-events on
 set -g default-terminal "screen-256color"
-set-option -ga terminal-overrides ",screen-256color:RGB"
+set -ga terminal-overrides ",xterm-256color*:RGB"
