add tmux plugin manager and tmux save & restore plugin

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -57,3 +57,24 @@ set-option -sg escape-time 10
 set-option -g focus-events on
 set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",xterm-256color*:RGB"
+
+
+# TPM: tmux plugin manager. (prefix + I to install plugins)
+set -g @plugin 'tmux-plugins/tpm'
+
+# plugin resurrect
+#   key binding: prefix+ <ctrl+s> save
+#   key binding: prefix+ <ctrl+r> restore
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+# for vim session
+set -g @resurrect-strategy-vim 'session'
+# for neovim session
+set -g @resurrect-strategy-nvim 'session'
+
+# plugin continuum
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @continuum-restore 'on'
+
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
