update the colorscheme in tmux mode

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,10 +41,10 @@ bind -r k select-pane -U # 上
 bind -r l select-pane -R # 右
 
 # 调整面板大小
-bind -r ^h resizep -L 10
-bind -r ^j resizep -D 10
-bind -r ^k resizep -U 10
-bind -r ^l resizep -R 10
+bind -r ^h resizep -L 5
+bind -r ^j resizep -D 5
+bind -r ^k resizep -U 5
+bind -r ^l resizep -R 5
 
 # 关闭面板
 unbind q
@@ -53,18 +53,21 @@ bind q kill-pane
 
 # 复制模式支持vi风格
 setw -g mode-keys vi
+set -g base-index 1
 set-option -sg escape-time 10
 set-option -g focus-events on
 set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",xterm-256color*:RGB"
 
 
-# TPM: tmux plugin manager. (prefix + I to install plugins)
-set -g @plugin 'tmux-plugins/tpm'
 
-# plugin resurrect
-#   key binding: prefix+ <ctrl+s> save
-#   key binding: prefix+ <ctrl+r> restore
+# enable plugin
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+# restore previous panel when starting tmux
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 # for vim session
 set -g @resurrect-strategy-vim 'session'
@@ -74,7 +77,8 @@ set -g @resurrect-strategy-nvim 'session'
 # plugin continuum
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @continuum-restore 'on'
-
-
+# set continuum autosave every minute
+set -g @continuum-save-interval '1'
+#
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
