--- a/.tmux.conf
+++ b/.tmux.conf
@@ -56,9 +56,7 @@ setw -g mode-keys vi
 set -g base-index 1
 set-option -sg escape-time 10
 set-option -g focus-events on
-set -g default-terminal "screen-256color"
-set -ga terminal-overrides ",xterm-256color*:RGB"
-
+set -g default-terminal "xterm"
 
 
 # enable plugin
